# aws_serv_disc

./: .gitignore  README.md  build.sh  rebar.config
c_src/: CMakeLists.txt  aws_serv_disc.cpp
src/: aws_serv_disc.app.src  aws_serv_disc.erl
